# systemtap

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README.security  README.stapregex  aclocal.m4  buildrun.cxx  cmdline.cxx  cmdline.h  config.in  configure  configure.ac  csclient.cxx  dtrace.in  dwarf_wrappers.cxx  dwarf_wrappers.h  dwflpp.cxx  dwflpp.h  elaborate.cxx  elaborate.h  examples  git_version.sh  loc2c-test.c  main.cxx  mdfour.c  nsscommon.cxx  nsscommon.h  parse.cxx  parse.h  remote.cxx  session.cxx  session.h  setupdwfl.cxx  stap-prep  stap-report  stap-serverd.cxx  stap-sign-module.cxx  (+30 more)
doc/: Makefile.in  langref.tex  tutorial.tex
doc/SystemTap_Tapset_Reference/: Makefile.in  tapsets.tmpl
doc/beginners/: Makefile.am  Makefile.in
elfutils-0.155/: Makefile.in  aclocal.m4  config.h.in  configure  elfutils.spec
elfutils-0.155/backends/: Makefile.in
elfutils-0.155/config/: Makefile.in
elfutils-0.155/lib/: Makefile.in
elfutils-0.155/libasm/: Makefile.in
elfutils-0.155/libcpu/: Makefile.in  i386_lex.c  i386_parse.c  i386_parse.h
elfutils-0.155/libdw/: Makefile.in  known-dwarf.h
elfutils-0.155/libdwfl/: Makefile.in
elfutils-0.155/libebl/: Makefile.in
elfutils-0.155/libelf/: Makefile.in
elfutils-0.155/m4/: Makefile.in
elfutils-0.155/po/: de.gmo  de.po  elfutils.pot  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  es.gmo  es.po  ja.gmo  ja.po  pl.gmo  pl.po  uk.gmo  uk.po
elfutils-0.155/src/: Makefile.in  ldlex.c  ldscript.c  ldscript.h
elfutils-0.155/tests/: Makefile.in
includes/sys/: sdt.h
java/: HelperSDT.c  HelperSDT.h  HelperSDT.java  Makefile.am  Makefile.in  README  TODO  libHelperSDT_getarch.java  stapbm  stapbm.in  stapbm.sh
java/org/systemtap/byteman/helper/: HelperSDT.java
man/: Makefile.am  Makefile.in  dtrace.1  error::buildid.7stap  error::dwarf.7stap  error::fault.7stap  error::inode-uprobes.7stap  error::pass1.7stap  error::pass2.7stap  error::pass4.7stap  error::pass5.7stap  error::process-tracking.7stap  error::reporting.7stap  error::sdt.7stap  stap-merge.1  stap-prep.1  stap-report.1  stap-server.8  stap.1  stapex.3stap  stappaths.7.in  stapprobes.3stap  stapsh.8  stapvirt.1  warning::debuginfo.7stap
po/: POTFILES.in  en.gmo  en.po  fr.gmo  fr.po  pl.gmo  pl.po  systemtap.pot
re2c-migrate/: Makefile.am  Makefile.in  re2c-dfa.cxx  re2c-dfa.h  re2c-emit.cxx  re2c-globals.cxx  re2c-regex.cxx  re2c-regex.h  regtest.cxx  stapregex.cxx  stapregex.h
re2c-migrate/regcomp.base/: regtest.exp  regtest.in.0  regtest.in.1
runtime/: common_probe_context.h  loc2c-runtime.h  map.h  proc_fs_compatibility.h  procfs.c  stp_string.c  stp_string.h  stp_utrace.c  time.c  unwind.c
runtime/dyninst/: common_session_state.h  copy.c  io.c  linux_defs.h  loc2c-runtime.h  print.c  regs.c  runtime.h  runtime_context.h  runtime_defines.h  session_attributes.c  session_attributes.h  shm.c  stapdyn.h  transport.c  transport.h  uprobes-regs.c  uprobes.c
runtime/linux/: alloc.c  compat_unistd.h  copy.c  loc2c-runtime.h  map_runtime.h  perf.c  runtime.h  runtime_context.h  task_finder.c  task_finder2.c  uprobes-common.c  uprobes-inode.c
runtime/transport/: control.c  relay_v2.c  symbols.c  transport.c
runtime/unwind/: unwind.h  x86_64.h
scripts/: spin-rawhide  tracepoint-diff
stapdyn/: Makefile.am  Makefile.in  README  dynutil.cxx  dynutil.h  mutatee.cxx  mutatee.h  mutator.cxx  mutator.h  stapdyn.8  stapdyn.cxx
staprun/: Makefile.am  Makefile.in  common.c  ctl.c  mainloop.c  modverify.c  relay.c  relay_old.c  stap_merge.c  stapio.c  staprun.8  staprun.c  staprun.h  staprun_funcs.c  stapsh.c  strfloctime.c
staprun/guest/: 99-stapsh-init.rules  99-stapsh.rules  stapsh-daemon.in  stapsh@.service.in  stapshd.in  virtio_console.modules
tapset/: errno.stp  logging.stp  macros.stpm  regex.stp  string.stp  timers.stp  uconversions.stp
tapset/arm64/: registers.stp
tapset/dyninst/: context.stp  target_set.stp
tapset/linux/: aux_syscalls.stp  context-caller.stp  context-symbols.stp  context.stp  dentry.stp  ip.stp  ipmib.stp  loadavg.stp  memory.stp  nd_syscalls.stp  nd_syscalls2.stp  networking.stp  nfs.stp  nfs_proc.stp  nfsd.stp  rcu.stp  rpc.stp  signal.stp  socket.stp  syscalls.stp  syscalls.stpm  syscalls2.stp  target_set.stp  task.stp  task_time.stp  tcp.stp  tcpmib.stp  ucontext-symbols.stp  ucontext.stp  udp.stp  vfs.stp
tapset/s390/: registers.stp
testsuite/: ChangeLog  Makefile.am  Makefile.in  configure  configure.ac
testsuite/buildok/: conversions-embedded.stp  dentry-embedded.stp  gtod_init.stp  gtod_noinit.stp  guru.stp  nd_syscalls-arch-detailed.stp  nd_syscalls-detailed.stp  nd_syscalls2-detailed.stp  nfs-detailed.stp  nfs_proc-embedded.stp  nfsd-detailed.stp  rcu.stp  seventeen.stp  socket-embedded.stp  syscalls-arch-detailed.stp  syscalls-detailed.stp  syscalls2-detailed.stp  task_time-embedded.stp  twenty.stp  twentyseven.stp  vfs-detailed.stp  vfs-embedded.stp
testsuite/lib/: stap_run.exp  stap_run_error.exp  systemtap.exp
testsuite/parseko/: preprocess18.stp  preprocess19.stp
testsuite/parseok/: fourteen.stp
testsuite/runok/: regex.stp
testsuite/semko/: badregex01.stp
testsuite/semok/: kretprobe-data.stp  nullpc.stp  thirtysix.stp
testsuite/systemtap.apps/: java.exp  java.stp  multiparams.java  multiparams.stp  python.exp  python2.stp  returnstatement.java  returnstatement.stp  singleparam.java
testsuite/systemtap.base/: at_var.exp  at_var.stp  at_var_cu.exp  at_var_cu.stp  at_var_cu_1.c  at_var_cu_2.c  at_var_cu_3.c  at_var_func.exp  at_var_func.stp  at_var_lvalue.c  at_var_lvalue.exp  at_var_lvalue.stp  at_var_mark.exp  at_var_mark.stp  at_var_mark_func.exp  at_var_mark_func.stp  at_var_pie.exp  at_var_timer_profile.c  at_var_timer_profile.exp  at_var_timer_profile.stp  at_var_tracepoint.exp  at_var_tracepoint.stp  at_var_unresolved.exp  at_var_unresolved_lvalue.exp  at_var_unresolved_lvalue.stp  at_var_void_stmt.c  at_var_void_stmt.exp  at_var_void_stmt.stp  atomic.exp  bad-code.exp  be_loaded.exp  be_loaded.stp  bz10078.stp  bz6850.exp  caller.exp  cmdline.exp  (+70 more)
(+113 files in other folders)
